--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,6 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
 body{
-    background-image: url('https://wallpaperbat.com/img/704147-website-wallpaper-top-free-website-background.png');
+    background-image: url('https://png.pngtree.com/background/20230617/original/pngtree-low-poly-abstract-network-communication-background-in-3d-render-picture-image_3682642.jpg');
+    background-size: cover;
     //background-color: rgb(67, 98, 99);
 }
 .red{
